--- a/style.css
+++ b/style.css
@@ -102,3 +102,82 @@ box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.486);
 
 
 }
+
+
+.propic{
+
+
+position: relative;
+left: 30%;
+height: 150px;
+width:150px;
+border:solid rgb(19, 21, 122) 03px;
+padding: 8px;
+border-radius: 200px;
+
+
+}
+
+
+.heading{
+
+    font-weight: 600;
+    font-size:20px;
+    font-family: "Poppins", sans-serif;
+
+}
+
+.lable{
+
+    font-weight: 600;
+    font-size:16px;
+    font-family: "Poppins", sans-serif;
+
+
+}
+
+.text{
+
+    font-weight: 400;
+    font-size:16px;
+    font-family: "Poppins", sans-serif;
+
+
+}
+
+
+.workimg{
+
+    height:150px;
+    width:150px; 
+    
+}
+
+.work{
+
+
+
+}
+
+
+.worksec{
+
+    text-align: center;
+
+}
+
+
+.worklable{
+
+
+    text-align: center;
+
+}
+
+
+.ptext{
+
+    font-family: "Poppins", sans-serif;
+
+
+}
